Added the user related basic endpoints.
